--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +8,61 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="contenido">
+        <header>
+            <h1 class="header__titulo">Sr.Mueble</h1>
+            <picture class="header__banner">
+                <source srcset="
+                ./img/sillon_azul.jpg x1, 
+                ./img/sillon_azul@2x.jpg x2, 
+                ./img/sillon_azul@3x.jpg x3">
+                <!-- imagen con alt -->
+                <img src="" alt="sillon color azul pastel visto frontal">
+            </picture>
+            <section class="header__telefono">+34 666 666 666</section>
+        </header>
+        <main>
+            <h2 class="main__subtitulo quienesSomos">¿Quienes somos?</h2>
+            <section class="main__descripcion">
+                <p class="main__descripcion__anio">1988</p>
+                <p class="main__descripcion__explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt quibusdam nihil aperiam.</p>
+                <p class="main__descripcion__anio">1994</p>
+                <p class="main__descripcion__explicacion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae quae ullam dolorum?</p>
+            </section>
+            <img src="" alt="">
+            <h2 class="main__subtitulo servicios">SERVICIOS</h2>
+            <picture>
+
+            </picture>
+            <picture>
+
+            </picture>
+            <picture>
+
+            </picture>
+            <p class="main__contacto">¿Quieres recibir nuestras novedades?</p>
+            <form class="main__formulario">
+                <input type="email" name="email" placeholder="E-mail">
+                <input type="button" value="REGISTRATE">
+            </form>
+        </main>
+        <footer>
+            <section class="footer__contenido">
+                <h4 class="footer__contactar">Contactar</h4>
+                <ul class="footer__direccion">
+                    <li>Direccion Plaza España, 34</li>
+                    <li>Palma de Mallorca</li>
+                    <li>info@srmuebles.com</li>
+                </ul>
+                <h4 class="footer__redes">Redes</h4>
+                <ul class="footer__redes-sociales">
+                    <li>Twitter</li>
+                    <li>Pinterest</li>
+                    <li>Instagram</li>
+                </ul>
+                <h5 class="footer__copyright">Copyright 2021 - Sr.Mueble</h5>
+            </section>
+        </footer>
+    </section>
 </body>
 </html>
