Arreglo imagen banner

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <h1 class="header__titulo">Sr.Mueble</h1>
             <picture class="header__banner">
                 <source srcset="
-                ./img/sillon_azul.jpg x1, 
-                ./img/sillon_azul@2x.jpg x2, 
-                ./img/sillon_azul@3x.jpg x3">
+                ./img/sillon_azul.jpg 1x, 
+                ./img/sillon_azul@2x.jpg 2x, 
+                ./img/sillon_azul@3x.jpg 3x">
                 <!-- imagen con alt -->
                 <img src="" alt="sillon color azul pastel visto frontal">
             </picture>
