Arreglo footer, creación de botones y centrado de los elementos

--- a/index.html
+++ b/index.html
@@ -42,12 +42,18 @@
             </picture>
             <p class="main__contacto">¿Quieres recibir nuestras novedades?</p>
             <form class="main__formulario">
-                <input type="email" name="email" placeholder="E-mail">
-                <input type="button" value="REGISTRATE">
+                <input 
+                type="email" 
+                name="email" 
+                placeholder="E-mail" 
+                class="input__email" >
+                <input 
+                type="button" 
+                value="REGISTRATE" 
+                class="input__btn">
             </form>
         </main>
         <footer>
-            <section class="footer__contenido">
                 <h4 class="footer__contactar">Contactar</h4>
                 <ul class="footer__direccion">
                     <li>Direccion Plaza España, 34</li>
@@ -61,7 +67,6 @@
                     <li>Instagram</li>
                 </ul>
                 <h5 class="footer__copyright">Copyright 2021 - Sr.Mueble</h5>
-            </section>
         </footer>
     </section>
 </body>
